# mcp-trading

./: .env.example  .gitignore  CLAUDE.md  CLI_README.md  README.md  app.py  auth_utils.py  claude_desktop_config.example.json  cleanup_job.py  cli.py  database.py  encryption.py  error_handling.py  fastmcp_auth_middleware.py  main.py  mcp_integration.py  oauth_server.py  option_symbol_utils.py  pyproject.toml  request_context.py  requirements-cli.txt  schwab_client.py  setup_oauth.py  simple_multileg_debug.py  tradier_client.py  trading.py  trading_client_factory.py  trading_oauth.py  trading_platform_interface.py  trading_server_oauth.py
auth/: auth_utils.py  oauth_server.py
auth/templates/: setup.html
cli/: cli.py
docs/: SCHWAB_SETUP.md
mcp_server/: error_handling.py  etrade_client.py  schwab_client.py  tradier_client.py  trading_client_factory.py  trading_platform_interface.py  trading_server_oauth.py
migrations/: 001_add_oauth_token_fields.py  002_remove_schwab_environment_column.py  003_add_etrade_credentials.py  004_add_etrade_oauth_state.py
shared/: cleanup_job.py  database.py  encryption.py  request_context.py
templates/: login.html  register.html  setup.html
