[project]
name = "mcp-trading"
version = "0.1.0"
description = "MCP server for trading with various brokerages"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.24.0",
    "fastapi>=0.104.0",
    "authlib>=1.3.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "cryptography>=41.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.1.0",
    "python-multipart>=0.0.6",
    "itsdangerous>=2.1.0",
    "slowapi>=0.1.9",
    "schwab-py>=1.5.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
